--- a/style.css
+++ b/style.css
@@ -26,10 +26,11 @@ body {
 #background-tractor {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Pozwala na pokrycie całego obszaru bez zniekształceń */
+    object-fit: contain; /* Zmienione na contain */
     position: absolute;
     top: 0;
     left: 0;
+    background-color: black; /* Opcjonalnie: ustaw kolor tła dla pasków, np. czarny */
 }
 
 #target-image {
