--- a/style.css
+++ b/style.css
@@ -33,29 +33,27 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 1; /* Tło jest na samym spodzie */
 }
 
-/* NOWE STYLE DLA OPAKOWUJĄCEGO DIV'A (TO BĘDZIE KLIKALNE POLE) */
+/* STYLE DLA OPAKOWUJĄCEGO DIV'A (TO BĘDZIE KLIKALNE POLE) */
 #clickable-ozzy-wrapper {
     position: absolute;
-    width: 180px; /* Zwiększony rozmiar dla większego obszaru klikalnego (np. 150px oryginalny + 30px bufor) */
-    height: 180px; /* Zwiększony rozmiar dla większego obszaru klikalnego */
-    max-width: 30vw; /* Dostosuj max-width/height, aby skalowało się odpowiednio */
+    width: 180px; 
+    height: 180px; 
+    max-width: 30vw; 
     max-height: 30vw;
     
-    /* Użyj flexbox, aby wyśrodkować obrazek Ozzy'ego wewnątrz tego diva */
     display: flex;
     justify-content: center;
     align-items: center;
 
-    cursor: grab; /* Kursor na całym klikalnym obszarze */
-    z-index: 10; /* Wrapper musi być nad tłem */
-    left: 0; /* Początkowe pozycjonowanie */
-    top: 0; /* Początkowe pozycjonowanie */
-    transition: none; /* Brak transition na pozycji */
+    cursor: grab; 
+    z-index: 10; /* Ozzy i jego obszar klikalny są nad tłem i licznikiem */
+    left: 0; 
+    top: 0; 
+    transition: none; 
 
-    /* Dodatkowe zabezpieczenia przed zaznaczaniem/przeciąganiem na wrapperze */
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -67,11 +65,10 @@ body {
 #target-image {
     width: 100px; /* WIZUALNY ROZMIAR OZZY'EGO */
     height: 100px; /* WIZUALNY ROZMIAR OZZY'EGO */
-    border-radius: 50%; /* Nadal okrągły */
-    object-fit: contain; /* Obrazek będzie skalowany w dół, aby zmieścić się w tych wymiarach */
-    /* Usunięto: position, z-index, cursor, border, box-shadow, transition, transform - są na wrapperze */
-    border: 5px solid limegreen; /* Granica wizualna na samym Ozzym */
-    box-shadow: 0 0 25px rgba(0, 255, 0, 0.7); /* Cień wizualny na samym Ozzym */
+    border-radius: 50%; 
+    object-fit: contain; 
+    border: 5px solid limegreen; 
+    box-shadow: 0 0 25px rgba(0, 255, 0, 0.7); 
 }
 
 .hidden {
@@ -90,7 +87,7 @@ body {
     padding: 1vh 2vw;
     border-radius: 15px;
     border: 3px solid #5a2c00;
-    z-index: 20;
+    z-index: 5; /* POPRAWIONO: Teraz licznik jest pod Ozzym (niższy z-index niż 10) */
 }
 
 #message-display {
@@ -105,7 +102,7 @@ body {
     background-color: rgba(0, 0, 0, 0.9);
     padding: 3vh 6vw;
     border-radius: 30px;
-    z-index: 30;
+    z-index: 30; /* Nadal na wierzchu dla komunikatów */
     display: none;
     border: 5px solid red;
     box-shadow: 0 0 30px red;
@@ -124,7 +121,7 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
-    z-index: 40;
+    z-index: 40; /* Ekrany nakładkowe są na samym wierzchu */
     padding: 2vw;
     box-sizing: border-box;
 }
@@ -254,7 +251,7 @@ body {
     #clickable-ozzy-wrapper {
         width: 130px; /* Mniejszy klikalny obszar dla mobilnych */
         height: 130px;
-        max-width: 25vw; /* Dostosuj max-width/height dla mobilnych */
+        max-width: 25vw; 
         max-height: 25vw;
     }
     #target-image {
